# kagari

./: .gitignore  Cargo.toml  LICENSE-APACHE
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
crates/kagari/: Cargo.toml
crates/kagari-base/: Cargo.toml
crates/kagari-base/src/: color.rs  geometry.rs  id.rs  lib.rs  math.rs  string.rs  unit.rs
crates/kagari-base/tests/: properties.rs
crates/kagari-core/: Cargo.toml
crates/kagari-core/examples/: clear_window.rs
crates/kagari-core/src/: app.rs  error.rs  lib.rs
crates/kagari-layout/: Cargo.toml
crates/kagari-render/: Cargo.toml
crates/kagari-render/src/: atlas.rs  color.rs  error.rs  lib.rs  quad.rs  renderer.rs  scene.rs  sprite.rs  underline.rs
crates/kagari-render/src/shaders/: output.wgsl  quad.wgsl  sdf.wgsl  sprite.wgsl  underline.wgsl
crates/kagari-render/tests/: harness_smoke.rs  quad_golden.rs  sprite_golden.rs  underline_golden.rs
crates/kagari-render/tests/common/: mod.rs
crates/kagari-style/: Cargo.toml
crates/kagari-text/: Cargo.toml
crates/kagari-text/assets/fonts/: OFL.txt
crates/kagari-text/src/: error.rs  font.rs  lib.rs  raster.rs  shape.rs
crates/kagari-text/tests/: text_golden.rs
crates/kagari-text/tests/common/: mod.rs
crates/kagari-widgets/: Cargo.toml
crates/kagari/src/: lib.rs
