[package]
name = "kagari-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
kagari-base = { workspace = true }
kagari-render = { workspace = true }
kagari-layout = { workspace = true }
kagari-style = { workspace = true }
kagari-text = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
