[package]
name = "kagari-render"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
kagari-base = { workspace = true }
wgpu = { workspace = true }
# `derive` brings in the Pod/Zeroable derive macros for the GPU instance structs.
bytemuck = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
# Golden-image harness: readback decode/encode + blocking the async wgpu calls.
image = { workspace = true }
pollster = { workspace = true }

[lints]
workspace = true
