[package]
name = "kagari-text"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
kagari-base = { workspace = true }
kagari-render = { workspace = true }
cosmic-text = { workspace = true }
sys-locale = { workspace = true }
swash = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wgpu = { workspace = true }
image = { workspace = true }
pollster = { workspace = true }

[lints]
workspace = true
